<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook"
    tools:layout_editor_absoluteX="-17dp"
    tools:layout_editor_absoluteY="-24dp">

    <EditText
        android:id="@+id/email_input"
        style="@style/custom_input"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:drawableLeft="@drawable/mail_svgrepo_com"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_text_color"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/phone_input"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="@+id/phone_input"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/phone_input"
        style="@style/custom_input"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:drawableLeft="@drawable/phone_svgrepo_com"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="textPersonName"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_text_color"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="74dp"
        android:layout_height="15dp"
        android:text="@string/full_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone_No"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_pwd"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pawd_input" />

    <EditText
        android:id="@+id/pawd_input"
        style="@style/custom_input"
        android:layout_width="348dp"
        android:layout_height="62dp"
        android:drawableLeft="@drawable/key_svgrepo_com"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPersonName"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_text_color"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        style="@style/custom_input"
        android:layout_width="351dp"
        android:layout_height="63dp"
        android:drawableLeft="@drawable/user_01_svgrepo_com"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/input_text_color"
        android:textColorHint="@color/input_text_color"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/password_input"
        style="@style/custom_input"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:drawableLeft="@drawable/key_svgrepo_com"
        android:ems="10"
        android:hint="@string/Confirm_pwd"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/pawd_input"
        app:layout_constraintStart_toStartOf="@+id/pawd_input"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_login"
        android:elevation="10dp"
        android:shadowColor="@color/gray"
        android:text="@string/register"
        android:textColor="@color/facebook"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/have_acc"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="77dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pawd_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

</androidx.constraintlayout.widget.ConstraintLayout>